# esp32c3-playground

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: main.rs
