[package]
name = "foobar"
version = "0.1.0"
edition = "2021"

resolver = "2"

[profile.release]
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.5.0", features = [] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.12.0", features = ["esp32c3", "exception-handler", "panic-handler", "defmt"] }
esp-hal = { version = "0.18.0", features = ["esp32c3", "defmt"] }
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "defmt", "time-timg0"] }
embedded-io = { version = "0.6.1" }
embedded-hal-async = { version = "1.0.0" }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
